# bark

./: .gitignore  bark.py  commands.py  db.py  options.py  pyproject.toml
bark/commands/: commands.py
bark/persistence/: db.py  dtos.py  repositories.py
bark/presentation/interactive_cli/: __main__.py  bark.py  options.py
